Add some excludes

--- a/borgbackup/borgauto.sh.j2
+++ b/borgbackup/borgauto.sh.j2
@@ -29,7 +29,8 @@ borg create                         \
     --exclude '/home/*/.cache/*'    \
     --exclude '/var/cache/*'        \
     --exclude '/var/tmp/*'          \
-    --exclude '/srv/backup/'        \
+    --exclude '/srv/backup/*'        \
+    --exclude '/proc/*'
                                     \
     ::'{hostname}-{now}'            \
     /                               \
