--- a/borgbackup/borgauto.sh.j2
+++ b/borgbackup/borgauto.sh.j2
@@ -1,7 +1,10 @@
 #!/bin/sh
 
+# Copy output to logfile
+exec &> >(tee -a "/root/bin/borgbackup/logs/{{ ansible_fqdn }}/borg-auto.$(date +%Y%m%d-%H%M).log")
+
 # Setting this, so the repo does not need to be given on the commandline:
-#export BORG_REPO=ssh://backup@bayonet.plug.org.au:22/srv/backup/borg-{{ ansible_fqdn }}
+#export BORG_REPO=ssh://borg-power@bayonet.plug.org.au:22/srv/backup/borg-{{ ansible_fqdn }}
 export BORG_REPO=/srv/backup/borg-{{ ansible_fqdn }}
 
 # Setting this, so you won't be asked for your repository passphrase:
