--- a/borgbackup/borgauto.sh.j2
+++ b/borgbackup/borgauto.sh.j2
@@ -4,8 +4,8 @@
 exec &> >(tee -a "/var/log/borgbackup/borg-auto.$(date +%Y%m%d-%H%M).log")
 
 # Setting this, so the repo does not need to be given on the commandline:
-#export BORG_REPO=ssh://borg-power@bayonet.plug.org.au:22/srv/backup/borg-{{ ansible_fqdn }}
-export BORG_REPO=/srv/backup/borg-{{ ansible_fqdn }}
+#export BORG_REPO=ssh://borg-power@bayonet.plug.org.au:22/srv/backup/borg-{{ ansible_nodename }}
+export BORG_REPO=/srv/backup/borg-{{ ansible_nodename }}
 
 # Setting this, so you won't be asked for your repository passphrase:
 export BORG_PASSPHRASE='{{ borg_passphrase }}'
