--- a/borgbackup/borgauto-efs.sh.j2
+++ b/borgbackup/borgauto-efs.sh.j2
@@ -1,6 +1,9 @@
 #!/bin/bash
 # This script backs up EFS and should only run on one node
 
+PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+export PATH
+
 # Copy output to logfile
 exec &> >(tee -a "/var/log/borgbackup/borg-auto-efs.$(date +%Y%m%d-%H%M).log")
 
