--- a/borgbackup/borgauto.sh.j2
+++ b/borgbackup/borgauto.sh.j2
@@ -1,5 +1,8 @@
 #!/bin/bash
 
+PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+export PATH
+
 # Copy output to logfile
 exec &> >(tee -a "/var/log/borgbackup/borg-auto.$(date +%Y%m%d-%H%M).log")
 
@@ -41,9 +44,10 @@ ionice -c3 borg create              \
     --exclude '/var/tmp/'           \
     --exclude '/srv/efs/'           \
     --exclude '/srv/backup/'        \
-    --exclude '/proc'               \
     --exclude '/dev'                \
+    --exclude '/proc'               \
     --exclude '/sys'                \
+    --exclude '/tmp'                \
                                     \
     ::'{hostname}-{now}'            \
     /                               \
