--- a/mailman/mailman.apache.conf.j2
+++ b/mailman/mailman.apache.conf.j2
@@ -10,7 +10,7 @@ Alias /images/mailman/ /usr/share/images/mailman/
 # Use this if you don't want the "cgi-bin" component in your URL:
 # In case you want to access mailman through a shorter URL you should enable
 # this:
-#ScriptAlias /mailman/ /usr/lib/cgi-bin/mailman/
+ScriptAlias /mailman/ /usr/lib/cgi-bin/mailman/
 # In this case you need to set the DEFAULT_URL_PATTERN in
 # /etc/mailman/mm_cfg.py to http://%s/mailman/ for the cookie
 # authentication code to work.  Note that you need to change the base
