Add new recipient_delimiter

--- a/postfix/templates/main.cf.j2
+++ b/postfix/templates/main.cf.j2
@@ -49,7 +49,7 @@ relayhost =
 # mynetworks = 127.0.0.0/8
 mynetworks = 127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128
 #mailbox_size_limit = 0 - we set this down further
-recipient_delimiter = +
+recipient_delimiter = +-
 inet_interfaces = all
 inet_protocols = all
 
