Change from windowpa.in testing domain to po1.plug.org.au

--- a/exim4/templates/update-exim4.conf.conf.j2
+++ b/exim4/templates/update-exim4.conf.conf.j2
@@ -17,7 +17,7 @@
 # This is a Debian specific file
 
 dc_eximconfig_configtype='internet'
-dc_other_hostnames='sirius.windowpa.in,windowpa.in'
+dc_other_hostnames='edison.plug.org.au,po1.plug.org.au,edison.po1.plug.org.au'
 dc_local_interfaces=''
 dc_readhost=''
 dc_relay_domains=''
