--- a/opendkim/templates/keytable.j2
+++ b/opendkim/templates/keytable.j2
@@ -1,1 +1,1 @@
-mail._domainkey.windowpa.in windowpa.in:mail:/etc/dkimkeys/mail.private 
+mail._domainkey.po1.plug.org.au po1.plug.org.au:mail:/etc/dkimkeys/mail.private
