--- a/opendkim/templates/signingtable.j2
+++ b/opendkim/templates/signingtable.j2
@@ -1,2 +1,2 @@
-# Domain windowpa.in
-*@windowpa.in mail._domainkey.windowpa.in
+# Domain po1.plug.org.au
+*@po1.plug.org.au mail._domainkey.po1.plug.org.au
