New mailserver - reflect new LE SSL key names

--- a/postfix/templates/main.cf.j2
+++ b/postfix/templates/main.cf.j2
@@ -25,8 +25,8 @@ readme_directory = no
 compatibility_level = 2
 
 # TLS parameters
-smtpd_tls_cert_file = /etc/letsencrypt/live/mail.po1.plug.org.au/cert.pem
-smtpd_tls_key_file = /etc/letsencrypt/live/mail.po1.plug.org.au/privkey.pem
+smtpd_tls_cert_file = /etc/letsencrypt/live/mail.plug.org.au/cert.pem
+smtpd_tls_key_file = /etc/letsencrypt/live/mail.plug.org.au/privkey.pem
 smtp_tls_mandatory_protocols = !SSLv2, !SSLv3
 smtpd_tls_mandatory_protocols = !SSLv2, !SSLv3
 smtpd_use_tls=yes
