--- a/dovecot/templates/conf.d/10-ssl.conf.j2
+++ b/dovecot/templates/conf.d/10-ssl.conf.j2
@@ -9,8 +9,8 @@ ssl = yes
 # dropping root privileges, so keep the key file unreadable by anyone but
 # root. Included doc/mkcert.sh can be used to easily generate self-signed
 # certificate, just make sure to update the domains in dovecot-openssl.cnf
-ssl_cert = </etc/letsencrypt/live/mail.po1.plug.org.au/fullchain.pem
-ssl_key = </etc/letsencrypt/live/mail.po1.plug.org.au/privkey.pem
+ssl_cert = </etc/letsencrypt/live/mail.plug.org.au/fullchain.pem
+ssl_key = </etc/letsencrypt/live/mail.plug.org.au/privkey.pem
 
 # Use manually created DH parameters
 # To be enabled when we move to Debian 10.
