Postfix - defer mail for now (Edison)

--- a/postfix/templates/main.cf.j2
+++ b/postfix/templates/main.cf.j2
@@ -206,3 +206,4 @@ non_smtpd_milters = unix:/var/run/opendkim/opendkim.sock
 #local_recipient_maps = unix:passwd.byname $alias_maps
 #local_recipient_maps = proxy:unix:passwd.byname $alias_maps
 #local_recipient_maps =
+defer_transports = smtp smtps
