--- a/dns/knot.conf.j2
+++ b/dns/knot.conf.j2
@@ -24,9 +24,13 @@ key:
     secret: {{ dns_tsig_plugle_short }}
 
 remote:
+    # ns1.whiteitsolutions.com.au. (retiring IP)
+  - id: ns1-retiring
+    address: 45.77.49.133@53
+
     # ns1.whiteitsolutions.com.au.
   - id: ns1
-    address: 45.77.49.133@53
+    address: 203.29.241.26
 
     # ns4.whiteitsolutions.com.au.
   - id: ns4
@@ -48,12 +52,12 @@ template:
 zone:
   - domain: plug.linux.org.au
     file: "/etc/knot/plug.org.au.zone"
-    notify: [ns1, ns4]
+    notify: [ns1-retiring, ns1, ns4]
     acl: acl_secondary
 
   - domain: plug.org.au
     file: "/etc/knot/plug.org.au.zone"
-    notify: [ns1, ns4]
+    notify: [ns1-retiring, ns1, ns4]
     acl: acl_secondary
 
   - domain: _acme-challenge.plug.org.au
