Allow AXFR for new ns1 server

--- a/dns/knot.conf.j2
+++ b/dns/knot.conf.j2
@@ -38,7 +38,7 @@ remote:
 
 acl:
   - id: acl_secondary
-    address: [45.77.49.133, 172.104.191.155]
+    address: [45.77.49.133, 203.29.241.26, 172.104.191.155]
     action: transfer
 
   - id: acme_update_acl
