--- a/borgbackup/borgauto.sh.j2
+++ b/borgbackup/borgauto.sh.j2
@@ -52,6 +52,7 @@ ionice -c3 borg create              \
     --exclude '/dev'                \
     --exclude '/mnt'                \
     --exclude '/proc'               \
+    --exclude '/run'                \
     --exclude '/sys'                \
     --exclude '/tmp'                \
                                     \
