borgbackup: Rsync.net requires us to set $BORG_REMOTE_PATH now

--- a/borgbackup/borgauto-power.sh.j2
+++ b/borgbackup/borgauto-power.sh.j2
@@ -18,6 +18,9 @@ export BORG_PASSPHRASE='{{ borg_passphrase }}'
 # Setting this to enable power to access bayonet
 export BORG_RSH='ssh -i /root/bin/borg-power/ssh/id_ecdsa'
 
+# Rsync.net requires us to select a versioned copy of borg
+export BORG_REMOTE_PATH=borg14
+
 # Init once only
 #borg init --encryption=repokey ; exit
 
@@ -25,7 +28,7 @@ export BORG_RSH='ssh -i /root/bin/borg-power/ssh/id_ecdsa'
 info() { printf "\n%s %s\n\n" "$( date )" "$*" >&2; }
 trap 'echo $( date ) Backup interrupted >&2; exit 2' INT TERM
 
-info "Starting backup"
+info "$0: Starting backup to $BORG_REPO"
 
 # Backup the most important directories into an archive named after
 # the machine this script is currently running on:
