borgbackup: don't use spaces in backup archive names

--- a/borgbackup/borgauto.sh.j2
+++ b/borgbackup/borgauto.sh.j2
@@ -59,7 +59,7 @@ ionice -c3 borg create              \
     --exclude '/sys'                \
     --exclude '/tmp'                \
                                     \
-    ::'{hostname}-{now}'            \
+    ::'{hostname}-{now:%Y-%m-%dT%H:%M:%S}' \
     /                               \
 
 backup_exit=$?
