site.yml, dns: update DNS configuration to match what was on Edison
Namely:
 * Install the current version of the zone file. Since ACME challenges
   are in their own zone file, let's go back to managing it here.
 * Install zones for _acme-challenge subdomains with "force: false" so
   we don't overwrite any current challenges.
 * Store _acme-challenge zone files in /var/lib/knot/acme, so knot can
   write to them.
 * Correct the permissions: only the _acme-challenge zone files should
   be owned by knot. Everything else should be owned by root so it can't
   be changed.

--- a/dns/knot.conf.j2
+++ b/dns/knot.conf.j2
@@ -1,4 +1,4 @@
-#
+# {{ ansible_managed }}
 # This is a sample of a minimal configuration file for Knot DNS.
 # For more details, see man 5 knot.conf or refer to the server documentation.
 #
@@ -57,9 +57,9 @@ zone:
     acl: acl_secondary
 
   - domain: _acme-challenge.plug.org.au
-    file: "/etc/knot/_acme-challenge.plug.org.au.zone"
+    file: "/var/lib/knot/acme/_acme-challenge.plug.org.au.zone"
     acl: acme_update_acl
 
   - domain: _acme-challenge.po1.plug.org.au
-    file: "/etc/knot/_acme-challenge.po1.plug.org.au.zone"
+    file: "/var/lib/knot/acme/_acme-challenge.po1.plug.org.au.zone"
     acl: acme_update_acl
