--- a/dns/plug.org.au.zone.j2
+++ b/dns/plug.org.au.zone.j2
@@ -2,11 +2,11 @@ $TTL 43200	; 12 hours
 $TTL 3600 ; 1 hour
 $TTL 60 ; 1 minute
 @		IN SOA	ns1.plug.org.au. hostmaster.plug.org.au. (
-				2020041901 ; serial
+				2025063000 ; serial
 				4800       ; refresh (1 hour 20 minutes)
 				900        ; retry (15 minutes)
 				2419200    ; expire (4 weeks)
-				3600       ; minimum (1 hour)
+				300        ; minimum TTL (5 minutes)
 				)
 			NS	ns1.plug.org.au.
 			NS	ns1.whiteitsolutions.com.au.
@@ -29,6 +29,9 @@ power			A	54.252.97.56
 			TXT	"Amazon EC2 in Sydney"
 			LOC	33 55 50 S 151 11 49 E 20m
 
+iec			A	103.249.238.24
+			TXT	"Binary Lane in Perth"
+			TXT	"v=spf1 a mx ~all"
 edison			A       159.65.142.85
                         TXT     "DO droplet-10 2GiB in Singapore"
 			TXT	"v=spf1 a mx ~all"
@@ -49,12 +52,21 @@ bayonet                 A       13.55.13.28
                         TXT     "t3.micro Amazon EC2 in Sydney"
 			TXT	"v=spf1 a mx ~all"
 
+bbb			A	128.199.187.9
+                        TXT     "bigbluebutton droplet"
+
+ChAdEmO.plug.org.au	A	178.128.217.84
+; ephemeral testing 2022-06-15
+;din			A	157.230.248.49
+;                        TXT     "DO droplet-20 4GiB in Singapore"
+;			TXT	"v=spf1 a mx ~all"
+
 ; Services
 lists			CNAME   power	
-lists2			CNAME   bayonet	
+lists2			CNAME   edison	
 www			CNAME	power
 ; Some round-robin A records not running, pinning to mussel ; irc			CNAME	irc.uniirc.com.
-irc			CNAME	mussel.ucc.asn.au.
+irc			CNAME	mussel-out.ucc.asn.au.
 mumble			CNAME	power
 icecast			CNAME	power
 secure			CNAME	power
