--- a/dns/plug.org.au.zone.j2
+++ b/dns/plug.org.au.zone.j2
@@ -10,8 +10,8 @@ $TTL 60 ; 1 minute
 				)
 			NS	ns1.plug.org.au.
 			NS	ns1.whiteitsolutions.com.au.
-			NS	ns4.whiteitsolutions.com.au.	
-			A	54.252.97.56	
+			NS	ns4.whiteitsolutions.com.au.
+			A	54.252.97.56
 			MX	5 power.plug.org.au.
 			TXT	"v=spf1 a ip4:54.252.97.56 mx ~all"
 
@@ -19,19 +19,20 @@ $TTL 60 ; 1 minute
 _acme-challenge		NS	ns1.plug.org.au.
 _acme-challenge.po1	NS	ns1.plug.org.au.
 
-; ns1 = edison's floating IP
-ns1			A	188.166.198.61
+; ns1 = iec's IP
+ns1			A	103.249.238.24
 
 rt			MX	5 power.plug.org.au.
-rt			A	54.252.97.56	
+rt			A	54.252.97.56
 
-power			A	54.252.97.56 
+power			A	54.252.97.56
 			TXT	"Amazon EC2 in Sydney"
 			LOC	33 55 50 S 151 11 49 E 20m
 
 iec			A	103.249.238.24
 			TXT	"Binary Lane in Perth"
 			TXT	"v=spf1 a mx ~all"
+
 edison			A       159.65.142.85
                         TXT     "DO droplet-10 2GiB in Singapore"
 			TXT	"v=spf1 a mx ~all"
@@ -48,27 +49,13 @@ mail 			CNAME	edison.plug.org.au.
 services 		CNAME	edison.plug.org.au.
 ugmm                    CNAME   edison.plug.org.au.
 
-bayonet                 A       13.55.13.28
-                        TXT     "t3.micro Amazon EC2 in Sydney"
-			TXT	"v=spf1 a mx ~all"
-
-bbb			A	128.199.187.9
-                        TXT     "bigbluebutton droplet"
-
-ChAdEmO.plug.org.au	A	178.128.217.84
-; ephemeral testing 2022-06-15
-;din			A	157.230.248.49
-;                        TXT     "DO droplet-20 4GiB in Singapore"
-;			TXT	"v=spf1 a mx ~all"
-
 ; Services
-lists			CNAME   power	
-lists2			CNAME   edison	
+lists			CNAME   power
+lists2			CNAME   edison
 www			CNAME	power
-; Some round-robin A records not running, pinning to mussel ; irc			CNAME	irc.uniirc.com.
+; Some round-robin A records not running, pinning to mussel
+; irc			CNAME	irc.uniirc.com.
 irc			CNAME	mussel-out.ucc.asn.au.
 mumble			CNAME	power
 icecast			CNAME	power
 secure			CNAME	power
-lca2014			CNAME	userconf.osmahi.com.
-slack			A	64.137.233.248
