borgbackup: fix deprecation warning for prune command, and set BORG_REMOTE_PATH for brestore.sh

--- a/borgbackup/borgauto.sh.j2
+++ b/borgbackup/borgauto.sh.j2
@@ -73,7 +73,7 @@ info "Pruning repository"
 
 ionice -c3 borg prune               \
     --list                          \
-    --prefix '{hostname}-'          \
+    --glob-archives '{hostname}-*'  \
     --show-rc                       \
     --keep-daily    7               \
     --keep-weekly   4               \
