Remove references to edison in postfix config, and update aliases

--- a/roles/postfix/templates/aliases.j2
+++ b/roles/postfix/templates/aliases.j2
@@ -3,18 +3,18 @@ postmaster:    root
 root:	admin
 
 # chair, backup
-chair: zorlin@gmail.com,nick-plug@rcpt.to
+chair: committee
 chairperson: chair
 chairman: chair
 chairwoman: chair
 president: chair
-vicechair: nick-plug@rcpt.to,zorlin@gmail.com
+vicechair: committee
 vc: vicechair
 vp: vicechair
 vicepresident: vicechair
 secretary: p@delfante.it
 membership: secretary
-treasurer: pluglists@peterlyons.id.au
+treasurer: committee
 
 logcheck: logcheck@purewhite.id.au
 tim: tim@purewhite.id.au
