Replace DKIM keys.

--- a/roles/opendkim/templates/keytable.j2
+++ b/roles/opendkim/templates/keytable.j2
@@ -1,1 +1,1 @@
-mail._domainkey.po1.plug.org.au po1.plug.org.au:mail:/etc/dkimkeys/mail.private
+iec-2025-test po1.plug.org.au:iec-2025-test:/etc/dkimkeys/iec-2025-test.private
