--- a/roles/postfix/templates/main.cf.j2
+++ b/roles/postfix/templates/main.cf.j2
@@ -93,8 +93,8 @@ content_filter = scan:127.0.0.1:10026
 #milter_default_action = accept
 #milter_protocol = 6
 # from inside the chroot, the socket will be in /var/run/opendkim 
-#smtpd_milters = unix:/var/run/opendkim/opendkim.sock
-#non_smtpd_milters = unix:/var/run/opendkim/opendkim.sock
+#smtpd_milters = unix:opendkim/opendkim.sock
+#non_smtpd_milters = unix:opendkim/opendkim.sock
 
 #####################################
 # Things we might be able to remove #
