opendkim, dns-server: add DKIM keys for main plug domain

--- a/roles/opendkim/templates/keytable.j2
+++ b/roles/opendkim/templates/keytable.j2
@@ -1,1 +1,2 @@
 iec-2025-test po1.plug.org.au:iec-2025-test:/etc/dkimkeys/iec-2025-test.private
+iec2025 plug.org.au:iec2025:/etc/dkimkeys/iec2025.private
