--- a/roles/postfix/templates/master.cf.j2
+++ b/roles/postfix/templates/master.cf.j2
@@ -135,3 +135,17 @@ scalemail-backend unix -       n       n       -       2       pipe
   flags=R user=scalemail argv=/usr/lib/scalemail/bin/scalemail-store ${nexthop} ${user} ${extension}
 mailman   unix  -       n       n       -       -       pipe
   flags=FRX user=list argv=/usr/lib/mailman/bin/postfix-to-mailman.py ${nexthop} ${user}
+
+# An localhost smtpd for use by Mailman: use local delivery-style
+# milters and restrictions.
+127.0.0.1:8025 inet n   -       y       -       -       smtpd
+  -o syslog_name=postfix/local-smtp
+  -o smtpd_authorized_xforward_hosts=127.0.0.0/8
+  -o mynetworks=127.0.0.0/8
+  -o smtpd_recipient_restrictions=permit_mynetworks,reject
+  -o smtpd_client_restrictions=
+  -o smtpd_helo_restrictions=
+  -o smtpd_sender_restrictions=
+  -o smtpd_data_restrictions=
+  -o receive_override_options=no_unknown_recipient_checks
+  -o smtpd_milters=$non_smtpd_milters
